Oops, fix where :D goes

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -382,7 +382,7 @@ A L<Regex|/type/Regex> is declared with slashes like C</foo/>. Note that this C<
     my $x;                          # simple lexical variable
     my $x = 7;                      # initialize the variable
     my Int $x = 7;                  # declare the type
-    my Int $x:D = 7;                # specify that the value must be defined (not undef)
+    my Int:D $x = 7;                # specify that the value must be defined (not undef)
     my Int $x where { $_ > 3 } = 7; # constrain the value based on a function
     my Int $x where * > 3 = 7;      # same constraint, but using L<Whatever> short-hand
 
