Revert to terser title to maintain grouping
With the more expressive title, the doc moves down to the middle of the list instead of being grouped with the rest of 5to6 docs. To make the title more explanatory, I expanded the subtitle

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -1,8 +1,8 @@
 =begin pod
 
-=TITLE Perl 5 to Perl 6, in a nutshell
+=TITLE 5to6-nutshell
 
-=SUBTITLE How do I do what I used to do?
+=SUBTITLE Perl 5 to Perl 6, in a nutshell: How do I do what I used to do?
 
 This page attempts to index the changes in syntax and semantics from
 Perl 5 to Perl 6. Whatever worked in Perl 5 and must be written differently
