Replace lolcat by neutral title

--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -91,7 +91,7 @@ a given object is a type object or not:
         say "Type object";
     }
 
-=head1 I can haz state?
+=head1 State
 
 X<|attributes>
 X<|classes, attributes>
