faq reference to official rakudo star docker image

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -19,6 +19,9 @@ If you are a Linux or Mac user you probably want to download Rakudo Star and
 install via compilation (a simple process) the MoarVM version available from
 L<http://rakudo.org/downloads/star/|http://rakudo.org/downloads/star>.
 
+Or there is an official rakudo star docker image at 
+L<https://hub.docker.com/_/rakudo-star/> 
+
 If you are a Windows 32 or 64 bit user then Rakudo Star binaries are also
 available at the rakudo site. You will need Windows Git to use panda. 
 
