--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -777,7 +777,7 @@ L<Hash> type), you'll have to make sure to return it in the form of an item
 container that evaluates to the element's value when read, and updates it
 when assigned to. (Remember to use C<return-rw> or the C<is rw> routine
 trait to make that work; see the L<example
-|/language/subscripting#Custom_type_example>.)
+|/language/subscripts#Custom_type_example>.)
 
 On the other hand if you want your collection to be read-only, feel free
 to return non-container values directly.
