Update IO::Handle.seek parameters documentation

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -102,24 +102,25 @@ characters.
 
 =head2 method seek
 
-     method seek(IO::Handle:D: Int:D $offset, Int:D $whence)
+     method seek(IO::Handle:D: Int:D $offset, SeekType:D $whence --> True)
 
 Move the file pointer (that is the position at which any subsequent read
 or write operations will begin,) to the byte position specified by
 C<$offset> relative to the location specified by C<$whence> which may be
 one of:
 
-=item 0
+=item SeekFromBeginning
 
 The beginning of the file.
 
-=item 1
+=item SeekFromCurrent
 
 The current position in the file.
 
-=item 2
+=item SeekFromEnd
 
-The end of the file.
+The end of the file.  Please note that you need to specify a negative
+offset if you want to position before the end of the file.
 
 =head2 method tell
 
