--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -351,7 +351,7 @@ is possible: C<a ** 5> matches C<a> exactly five times.
     say Bool('aaaaa' ~~ /a ** 5/);   #-> True
 =end code
 
-It is also posible to use non inclusive ranges using a carat:
+It is also posible to use non inclusive ranges using a caret:
 
 =begin code
     say Bool('a' ~~ /a ** 1^..^6); #-> False
