--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -510,13 +510,13 @@ unless you include things like Moose, type checking modules etc. in your Perl 5
 script.
 
 The following crude benchmarks, with all the usual caveats about such things,
-can show Perl 6 to be of roughly equivalent speed to Perl 5 for some similar
-common tasks.
+can show Perl 6 can be faster than Perl 5 for some similar common tasks if
+the big weaponry is included, but at the same time Perl 5 can be much faster
+if only the bare bones are included.
 
 Try it on your system you may be pleasantly surprised!
 
 Examples:
-
 
     # Perl 6 version
     use v6;
@@ -526,12 +526,10 @@ Examples:
     for (1..1_000_000) -> $i {
         my $obj = Foo.new;
         $obj.i = $i;
-        say $obj.i;
     }
 
-    # Perl 5 version
+    # Slower Perl 5 version
     package Foo;
-    use 5.10.0;
     use Moose;
 
     has i => ( is=> 'rw');
@@ -539,13 +537,41 @@ Examples:
     for my $i (1..1_000_000) {
         my $obj = Foo->new;
         $obj->i($i);
-        say $obj->i;
     }
 
     __PACKAGE__->meta->make_immutable;
 
     1;
 
+    # Faster Perl 5 version that offers bare-bones set of features
+    # compared to Moose/Perl 6's version but those are not needed in this
+    # specific, simple program anyway.
+    package Foo;
+    use Mojo::Base -base;
 
+    has 'i';
+
+    for my $i (1..1_000_000) {
+        my $obj = Foo->new;
+        $obj->i($i);
+    }
+
+    1;
+
+    # Results on testing machine:
+    $ time perl6 Perl6-Version.p6
+    real 0m9.884s
+    user 0m9.853s
+    sys  0m0.016s
+
+    $ time perl Perl5-Slower-Version.pl
+    real 0m30.150s
+    user 0m30.102s
+    sys  0m0.012s
+
+    $ time perl Perl5-Faster-Version.pl
+    real 0m0.817s
+    user 0m0.812s
+    sys  0m0.004s
 
 =end pod
