add reference to POSIX from ecosystem

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -91,6 +91,9 @@ to set a sym link for the missing file.
 
 It's very easy to use Nativecall to access them.
 
+A ecosystem module L<POSIX|https://github.com/cspencer/perl6-posix> is
+also available.
+
 =head2 Does Rakudo have a core standard library?
 
 Rakudo is a compiler release with minimal batteries included (Test and
