--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -310,7 +310,7 @@ new object by C<bless>:
 
 Since C<BUILD> runs in the context of the newly created C<Task> object, it
 is allowed to manipulate those private attributes. The trick here is that
-the private attributes (C<&!callback> and C<&!dependencies>) are being used
+the private attributes (C<&!callback> and C<@!dependencies>) are being used
 as the bind targets for C<BUILD>'s parameters. Zero-boilerplate
 initialization! See L<objects|/language/objects#Object Construction> for
 more information.
