Fix example for Language/control/last.

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -622,7 +622,7 @@ The C<last> command immediately exits the loop in question.
 
 my @x = 1, 2, 3, 4, 5;
 for @x -> $x {
-    next if $x == 3;
+    last if $x == 3;
     print $x;
 }
 
