--- a/Language/classtut.pod
+++ b/Language/classtut.pod
@@ -17,8 +17,8 @@ is interesting and, at times, useful.
         has Task @!dependencies;
         has Bool $.done;
 
-        # Normally don't need to written
-        # BUILD is equivalent of constructor in other languages
+        # Normally doesn't need to be written
+        # BUILD is the equivalent of a constructor in other languages
         method new(&callback, *@dependencies) {
             return self.bless(:&callback, :@dependencies);
         }
