Use more common language
Maybe I live under a rock, but after 15 years of living in English speaking countries, I never heard of "tamale". Its appearance in a technical doc was an unwelcome distraction to a dictionary :)

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -190,7 +190,7 @@ All the same rules for semicolons and newlines apply, consistently
     elsif False { say "NO" }
     else        { say "yes" }                              ; # -> says "yes"
 
-The whole tamale produces either an empty list (if no blocks were run)
+The whole thing produces either an empty list (if no blocks were run)
 or the value produced by the block which did run:
 
     my $c = 0; say (1,
