--- a/Language/control.pod
+++ b/Language/control.pod
@@ -86,7 +86,7 @@ parenthesize a statement if it is the last thing in an expression:
 
 =head2 X<if|control flow>
 
-To conditionally run a block of code, use a C<if> followed by a condition.
+To conditionally run a block of code, use an C<if> followed by a condition.
 The condition, an expression, will be evaluated immediately after the
 statement before the C<if> finishes.  The block attached to the condition will
 only be evaluated if the condition means True when coerced to C<Bool>.
@@ -191,7 +191,7 @@ All the same rules for semicolons and newlines apply, consistently
     else        { say "yes" }                              ; # -> says "yes"
 
 The whole thing produces either an empty list (if no blocks were run)
-or the value produced by the block which did run:
+or the value produced by the block that did run:
 
     my $c = 0; say (1,
                     (if 0 { $c += 42; "two"; } else { $c += 43; 2; }),
