--- a/Language/control.pod
+++ b/Language/control.pod
@@ -203,10 +203,9 @@ or the value produced by the block that did run:
 Implementation note: Currently, Rakudo will say "1 Nil 3 0" for the last
 example because it is not caught up to this part of the design yet.
 
-Each block must individually say whether it wants to know what the
-conditional expression evaluated to.  In the case of an C<else> that
-has one or more C<elsif>s in front of it, the last C<elsif> determines
-what the C<else> sees, since it was the last one tried:
+It's possible to obtain the value of a previous expression inside an
+C<else>, which could be from C<if> or the last C<elsif> if any are
+present:
 
     $_ = 1; if 0     { } else -> $a { "$_ $a".say } ; # says "1 0"
     $_ = 1; if False { } else -> $a { "$_ $a".say } ; # says "1 False"
