--- a/Language/control.pod
+++ b/Language/control.pod
@@ -203,7 +203,7 @@ or the value produced by the block that did run:
 Implementation note: Currently, Rakudo will say "1 Nil 3 0" for the last
 example because it is not caught up to this part of the design yet.
 
-It's possible to obtain the value of a previous expression inside an
+It's possible to obtain the value of the previous expression inside an
 C<else>, which could be from C<if> or the last C<elsif> if any are
 present:
 
