Remove duplicate word

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -193,8 +193,8 @@ old variable as we did with C<$*dynamic2>.
 
 The dynamic variables differ from other variable types in that refering
 to an undeclared dynamic variable is not a compile time error but a
-runtime L<failure|/type/Failure>, so a dynamic variable variable can be
-used undeclared as long as it is checked for definedness or used in a
+runtime L<failure|/type/Failure>, so a dynamic variable can be used
+undeclared as long as it is checked for definedness or used in a
 boolean context before using it for anything else:
 
     =begin code
