--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -67,8 +67,8 @@ objects are used:
 =for code :allow<L>
 $*IN.L<input-line-separator> = "\r\n";
 
-Here, we are call the method C<input-line-separator> on the C<$*IN> object,
-give it no arguments, and assign to the container it returned with the
+Here, we are calling method C<input-line-separator> on the C<$*IN> object,
+without arguments, and assign to the container it returned with the
 L<C<=>|=> operator.
 
 All objects support the methods from class L<Mu>, which is the root of the
