--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -71,7 +71,7 @@ Here, we are calling method C<input-line-separator> on the C<$*IN> object,
 without arguments, and assign to the container it returned with the
 L<C<=>|=> operator.
 
-All objects support the methods from class L<Mu>, which is the root of the
+All objects support methods from class L<Mu>, which is the root of the
 type hierarchy. In other words, all objects are derived from C<Mu>.
 
 =head2 Type Objects
