--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -139,8 +139,7 @@ another class.
 
 Attributes are variables that exist per instance of a class. They are where
 the state of an object is stored. In Perl 6, all attributes are private.
-They are typically declared using the C<has> declarator and using the C<!>
-twigil.
+They are typically declared using the C<has> declarator and the C<!> twigil.
 
     class Journey {
         has $!origin;
