Reword for clarity
When reading code examples in detail, it is not immediately obvious the sentence refers to the example a paragraph earlier and "in the method describe" looks like a typo

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -240,7 +240,8 @@ used in methods and can always be used with the C<!> twigil, even if they
 are declared with the C<.> twigil. This is because really, the C<.> twigil
 declares a C<!> twigil and then additionally generates an accessor method.
 
-There is a subtle but important difference between using, say, C<$!origin>
+Looking at the code above,
+there is a subtle but important difference between using C<$!origin>
 and C<$.origin> in the method C<describe>. The first is always a simple
 lookup of the attribute. It is cheap, and you know that it is the attribute
 declared in this class. The latter is really a method call and thus it may
