--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -526,9 +526,7 @@ order:
         }
     }
 
-=head1 Roles
-
-X<Roles|declarator,role>
+=head1 X<Roles|declarator,role>
 
 Roles are in some ways similar to classes, in that they are a collection of
 attributes and methods. They differ in that roles are also meant for
