input-line-separator is now nl-in

--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -65,9 +65,9 @@ return value of a method call. This is how read-writable attributes to
 objects are used:
 
 =for code :allow<L>
-$*IN.L<input-line-separator> = "\r\n";
+$*IN.L<nl-in> = "\r\n";
 
-Here, we are calling method C<input-line-separator> on the C<$*IN> object,
+Here, we are calling method C<nl-in> on the C<$*IN> object,
 without arguments, and assign to the container it returned with the
 L<C<=>|=> operator.
 
