remove claims about slower and faster

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -531,7 +531,7 @@ Examples:
         $obj.i = $i;
     }
 
-    # Slower Perl 5 version
+    # Perl 5 version
     package Foo;
     use Moose;
 
@@ -546,7 +546,7 @@ Examples:
 
     1;
 
-    # Faster Perl 5 version that offers bare-bones set of features
+    # Another Perl 5 version that offers bare-bones set of features
     # compared to Moose/Perl 6's version but those are not needed in this
     # specific, simple program anyway.
     package Foo;
