an example program using bigints which runs under 5 and 6

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -561,4 +561,14 @@ Examples:
 
     1;
 
+    # A perl program which works under both perl5 (with perl -Mbigint)
+    # and perl6
+
+    my ($prev, $current) = (1,0);
+
+    for ( 0..100_000) {
+        ($prev, $current) = ($current, $prev + $current);
+    }
+    print $current;
+
 =end pod
