--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -69,7 +69,7 @@ fast recognition by humans.
 The default C<gist> method in C<Mu> re-dispatches to the L<perl> method for
 defined invocants, and returns the type name in parenthesis for type object
 invocants.
-Many built-in classes override the case of instances to something more specific.
+Many built-in classes override the case of instances to something more specific, output may be trancated.
 
 C<gist> is the method that L<say> calls implicitly, so C<say $something> and
 C<say $something.gist> generally produce the same output.
