--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -171,7 +171,7 @@ adding a newline at end.
     multi method say() returns Bool:D
 
 Prints value to C<$*OUT> after stringification using C<.gist> method with
-newline at end.
+newline at end. To produce machine readable output use C<.put>.
 
     say 42;                 # 42
 
