Extend example for clarity

--- a/Type/Promise.pod
+++ b/Type/Promise.pod
@@ -80,7 +80,9 @@ Creates a new Promise that will be kept in C<$seconds> seconds, or later.
 
 Returns a new promise that will be kept when all the promises passed as
 arguments are kept, and that will be broken as soon as any of the argument
-promises is broken.
+promises is broken. You may need to run the following code several times
+before none of the promises get broken with C<die> and we get to
+the C<say> on the last line, instead of bailing out on C<await>.
 
     my @promises;
     for 1..5 -> $t {
@@ -91,6 +93,7 @@ promises is broken.
     }
     my $all-successful = Promise.allof(@promises);
     await $all-successful;
+    say "Promises kept so we get to live another day!";
 
 =head2 method anyof
 
