--- a/Type/Promise.pod
+++ b/Type/Promise.pod
@@ -219,7 +219,8 @@ exception of type C<X::Promise::Vowed>.
     multi sub await(Promise:D)
     multi sub await(*@)
 
-Waits until one or more promises are all fulfilled, and then returns their
-values. Also works on L<channels|/type/Channel>.
+Waits until one or more promises are I<all> fulfilled, and then returns their
+values. Also works on L<channels|/type/Channel>. Any broken promises will
+rethrow their exceptions. 
 
 =end pod
