--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -183,8 +183,9 @@ name.
 
 The C<$> sigil is now always used with "scalar" variables (e.g. C<$name>),
 and no longer for L<array indexing|#[]_Array_indexing/slicing> and L<Hash
-indexing|#{}_Hash_indexing/slicing>.  That is, you will still use C<$x[1]>
-and C<$x{"foo"}>, but you use them on C<$x>, not C<@x> or C<%x>.
+indexing|#{}_Hash_indexing/slicing>.  That is, you can still use C<$x[1]>
+and C<$x{"foo"}>, but it will act on $x, with no effect on a similarly
+named @x or %x. Those would now be accessed with @x[1] and %x{"foo"}.
 
 =head4 C<@> Array
 
