Changed instances of "content" to "context" in string/list repeat op doc

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -588,10 +588,10 @@ Mnemonic: think of "stitching" together the two strings with needle and thread.
 
 In Perl 5, C<x> was the Repetition operator.
 
-In scalar content, C<x> would repeat a string. In Perl 6, C<x> repeats
+In scalar context, C<x> would repeat a string. In Perl 6, C<x> repeats
 strings in any context.
 
-In list content, C<x> would repeat a list—but only if the left argument
+In list context, C<x> would repeat a list—but only if the left argument
 is parenthesized! In Perl 6, the new C<xx> op repeats lists in any context.
 
 Mnemonic: x is short and xx is long, so xx is the one used for lists.
