--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -166,6 +166,15 @@ adding a newline at end.
 
     "abc\n".print;          # abc
 
+=head2 method put
+
+    multi method put() returns Bool:D
+
+Prints value to C<$*OUT> after stringification using C<.Str> method adding a
+newline at end.
+
+    "abc".put;          # abc␤
+
 =head2 method say
 
     multi method say() returns Bool:D
