add printable newline to example output

--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -164,7 +164,7 @@ initializing any attributes.
 Prints value to C<$*OUT> after stringification using C<.Str> method without
 adding a newline at end.
 
-    "abc\n".print;          # abc
+    "abc\n".print;          # abc␤
 
 =head2 method put
 
@@ -182,7 +182,7 @@ newline at end.
 Prints value to C<$*OUT> after stringification using C<.gist> method with
 newline at end. To produce machine readable output use C<.put>.
 
-    say 42;                 # 42
+    say 42;                 # 42␤
 
 =head2 method ACCEPTS
 
