add sub IO::say

--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -30,6 +30,12 @@ displays
 To print text implicitly including the trailing newline character, use
 L<say|/type/IO#sub_say>.
 
+=head2 sub put
+
+Print the given text on C<$*OUT> (standard output) with appended C<$*OUT.nl-out>. The default for the latter is the platform dependent newline sequence. 
+
+    print 'Merry 1.0!'     # Merry 1.0!␤
+
 =head2 sub say
 
 Print the given text, followed by a newline C<"\n"> on C<$*OUT> (standard
