Fix typo in code example

--- a/Type/IO.pod
+++ b/Type/IO.pod
@@ -34,7 +34,7 @@ L<say|/type/IO#sub_say>.
 
 Print the given text on C<$*OUT> (standard output) with appended C<$*OUT.nl-out>. The default for the latter is the platform dependent newline sequence. 
 
-    print 'Merry 1.0!'     # Merry 1.0!␤
+    put 'Merry 1.0!'     # Merry 1.0!␤
 
 =head2 sub say
 
