Fix code example to not emit warnings when run

--- a/Language/grammars.pod
+++ b/Language/grammars.pod
@@ -60,8 +60,8 @@ C<rule> declarator causes L<C<:sigspace>|/language/regexes#Sigspace> to go
 into effect for the Regex:
 
     =begin code :allow<B>
-    my token non-space-y { once upon a time }
-    my rule space-y { once upon a time }
+    my token non-space-y { 'once' 'upon' 'a' 'time' }
+    my rule space-y { 'once' 'upon' 'a' 'time' }
     say 'onceuponatime'    ~~ &non-space-y;
     say 'once upon a time' ~~ &space-y;
     =end code
