Remove ~, since it is not needed in the example and is distracting from the subject matter, if the reader is not aware of it

--- a/Language/grammars.pod
+++ b/Language/grammars.pod
@@ -100,7 +100,7 @@ grammar TestGrammar {
 
 class TestActions {
     method TOP($/) {
-        $/.make(2 + ~$/);
+        $/.make(2 + $/);
     }
 }
 
