Explain why token ws {} is in the example

--- a/Language/grammars.pod
+++ b/Language/grammars.pod
@@ -184,4 +184,10 @@ C<parse>, which was possible because none of the action methods use attributes
 In other cases, action methods might want to keep state in attributes. Then of
 course you must pass an instance to method parse.
 
+Note that C<token> C<ws> is special: when C<:sigspace> is enabled (and it is
+when we are using C<rule>), it replaces certain whitespace sequences. This is
+why the spaces around the equals sign in C<rule pair> work just fine and why
+the whitespace before closing C<}> does not gobble up the newlines looked for
+in C<token TOP>.
+
 =end pod
