--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -59,7 +59,7 @@ exceptions and handle them appropriately inside a C<when> block.
 One can also explicitly throw exceptions via the C<.throw> method on an
 C<Exception> object.
 
-This example throws an C<AdHoc> exception, catching it and allowing the code
+This example throws an C<AdHoc> exception, catches it and allows the code
 to continue from the point of the exception.
 
     {
