--- a/Language/exceptions.pod
+++ b/Language/exceptions.pod
@@ -60,13 +60,13 @@ One can also explicitly throw exceptions via the C<.throw> method on an
 C<Exception> object.
 
 This example throws an C<AdHoc> exception, catches it and allows the code
-to continue from the point of the exception.
+to continue from the point of the exception by calling the C<.resume> method.
 
     {
         X::AdHoc.new(:payload<foo>).throw;
         "OHAI".say;
         CATCH {
-            when X::AdHoc { $_.resume }
+            when X::AdHoc { .resume }
         }
     }
     "OBAI".say;
@@ -86,7 +86,7 @@ exception's payload is passed on to the backtrace printing mechanism.
     #!> in block <unit> at /tmp/FbtB60dxVO:1
 
 This example doesn't resume from the point of the exception, however
-continues after the enclosing block, since the exception was caught and
+it continues after the enclosing block, since the exception was caught, and
 control continues after the C<CATCH> block.
 
     {
