--- a/Language/io.pod
+++ b/Language/io.pod
@@ -11,17 +11,17 @@ L<IO::Path|/type/IO::Path> types.
 
 =head1 Reading from files
 
-To read in the contents of a file one could open the file via the C<open>
+One way to read the contents of a file is to open the file via the C<open>
 function with the C<:r> (read) file mode option and slurp in the contents:
 
     my $fh = open "testfile", :r;
     my $contents = $fh.slurp-rest;
     $fh.close;
 
-where we explicitly close the file handle using the C<close> method on the
-C<IO::Handle> object.  This is a very traditional way of reading the
-contents of a file.  However, we can do the same much more easily and
-clearly like so:
+Here we explicitly close the file handle using the C<close> method on the
+C<IO::Handle> object. This is a very traditional way of reading the
+contents of a file. However, the same can be done more easily and clearly
+like so:
 
     my $contents = "testfile".IO.slurp;
     # or in procedural form:
