--- a/Language/io.pod
+++ b/Language/io.pod
@@ -64,13 +64,13 @@ writing the data to the file and closing it again for us:
 
     spurt "testfile", "data and stuff\n";
 
-By default all (text) files are written as UTF-8, however if necessary, one
-can explicitly specify an encoding via the C<:enc> option:
+By default all (text) files are written as UTF-8, however if necessary, an
+explicit encoding can be specified via the C<:enc> option:
 
     spurt "testfile", "latin1 text: äöüß", enc => "latin1";
 
-To append to a file, one can specify the C<:a> option when opening the file
-handle explicitly,
+To append to a file, specify the C<:a> option when opening the file handle
+ explicitly,
 
     my $fh = open "testfile", :a;
     $fh.print("more data\n");
