--- a/Language/io.pod
+++ b/Language/io.pod
@@ -86,9 +86,9 @@ or even simpler with the C<:append> option in the call to C<spurt>:
 
     spurt "testfile", "more data\n", :append;
 
-One can also explicitly write binary data to a file by opening it with the
-C<:bin> option.  The input/output operations now take place using the C<Buf>
-type instead of the C<Str> type.
+To explicitly write binary data to a file, open it with the C<:bin> option.
+The input/output operations then will take place using the C<Buf> type instead
+of the C<Str> type.
 
 =head1 Checking files and directories
 
