Do not explicitly suggest to check for file"s existence before reading
It"s not a suitable check due to race conditions and errors when opening for read aren"t as evil as the current wording suggests

--- a/Language/io.pod
+++ b/Language/io.pod
@@ -92,9 +92,8 @@ of the C<Str> type.
 
 =head1 Checking files and directories
 
-We don't want an error to be thrown if we try to open a file that doesn't
-exist.  So, how do we know that the file even exists before reading it?
-This is what the C<e> method on an C<IO::Handle> object is for.
+Use the C<e> method on an C<IO::Handle> object to test whether the file or
+directory exist.
 
     if "nonexistent_file".IO.e {
         say "file exists";
