--- a/Language/io.pod
+++ b/Language/io.pod
@@ -93,7 +93,7 @@ of the C<Str> type.
 =head1 Checking files and directories
 
 Use the C<e> method on an C<IO::Handle> object to test whether the file or
-directory exist.
+directory exists.
 
     if "nonexistent_file".IO.e {
         say "file exists";
@@ -135,9 +135,8 @@ the file test method C<f>:
 
 =head1 Getting a directory listing
 
-To list the files and directories in the current directory, one merely needs
-to use the C<dir> function.  This returns a list of L<IO::Path> objects one
-can then write to, read from etc.
+To list the contents of the current directory, use the C<dir> function. It
+returns a list of L<IO::Path> objects.
 
     say dir;    # "/path/to/testfile".IO "/path/to/lib".IO
 
@@ -154,13 +153,11 @@ directory name as its argument:
     mkdir "newdir";
 
 The function returns the name of the created directory on success and C<Nil>
-on failure.  Thus the standard Perl idiom
+on failure. Thus the standard Perl idiom works as expected:
 
     mkdir "newdir" or die "$!";
 
-works as expected.
-
-Similarly, one can remove I<empty> directories with C<rmdir>:
+Use C<rmdir> to emove I<empty> directories:
 
     rmdir "newdir" or die "$!";
 
