--- a/Language/io.pod
+++ b/Language/io.pod
@@ -157,7 +157,7 @@ on failure. Thus the standard Perl idiom works as expected:
 
     mkdir "newdir" or die "$!";
 
-Use C<rmdir> to emove I<empty> directories:
+Use C<rmdir> to remove I<empty> directories:
 
     rmdir "newdir" or die "$!";
 
