Slight Supply.throttle reorganization

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -387,39 +387,7 @@ for the types of messages that you can send to control the throttle.
 
 The :status named parameter optionally specifies a Supply that will receive
 any status messages.  If specified, it will at least send one status message
-after the original Supply is exhausted.  The status message is a hash with
-the following keys:
-
-=item allowed
-
-The current number of messages / callables that is still allowed to be
-passed / executed.
-
-=item bled
-
-The number of messages routed to the :bleed Supply.
-
-=item buffered
-
-The number of messages currently buffered because of overflow.
-
-=item emitted
-
-The number of messages emitted (passed through).
-
-=item id
-
-The id of this status message (a monotonically increasing number).  Handy
-if you want to log status messages.
-
-=item limit
-
-The current limit that is being applied.
-
-=item vent-at
-
-The maximum number of messages that may be buffered before they're
-automatically re-routed to the :bleed Supply.
+after the original Supply is exhausted.  See L<status message> below.
 
 The :bleed named parameter optionally specifies a Supply that will receive
 any values that were either explicitly bled (with the B<bleed> control
@@ -456,6 +424,41 @@ rerouting of buffered values to match the new maximum.
 =item status
 
 Send a status message to the :status Supply with the given id.
+
+=head3 status message
+
+The status return message is a hash with the following keys:
+
+=item allowed
+
+The current number of messages / callables that is still allowed to be
+passed / executed.
+
+=item bled
+
+The number of messages routed to the :bleed Supply.
+
+=item buffered
+
+The number of messages currently buffered because of overflow.
+
+=item emitted
+
+The number of messages emitted (passed through).
+
+=item id
+
+The id of this status message (a monotonically increasing number).  Handy
+if you want to log status messages.
+
+=item limit
+
+The current limit that is being applied.
+
+=item vent-at
+
+The maximum number of messages that may be buffered before they're
+automatically re-routed to the :bleed Supply.
 
 =head2 method stable
 
