Add simple example of Supply.throttle (code)

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -460,6 +460,34 @@ The current limit that is being applied.
 The maximum number of messages that may be buffered before they're
 automatically re-routed to the :bleed Supply.
 
+=head3 Examples
+
+Have a simple piece of code announce when it starts running asynchronously,
+wait a random amount of time, then announce when it is done.  Do this 6 times,
+but don't let more than 3 of them run simultaneously.
+
+  my $s = Supply.from-list(^6);  # set up supply 
+  my $t = $s.throttle: 3,        # only allow 3 at a time
+  {                              # code block to run
+      say "running $_";          # announce we've started
+      sleep rand;                # wait some random time
+      say "done $_"              # announce we're done
+  }                              # don't need ; because } at end of line
+  $t.wait;                       # wait for the supply to be done
+  =============
+  running 0
+  running 1
+  running 2
+  done 2
+  running 3
+  done 1
+  running 4
+  done 4
+  running 5
+  done 0
+  done 3
+  done 5
+
 =head2 method stable
 
     method stable(Supply:D: $seconds, :$scheduler) returns Supply:D
